JMIA-6765 - list movement types
