# domain/catalog/src/main/java/com/jumia/skylens/domain/catalog/MovementType.java
@@ -1,0 +1,7 @@
+package com.jumia.skylens.domain.catalog;
+
+public enum MovementType {
+
+    DOOR,
+    PUS
+}
